; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfs_label_associate_directory.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfs_label_associate_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devnode = type { i32 }

@devfs_label_associate_directory = common dso_local global i32 0, align 4
@mac_device_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_devfs_label_associate_directory(i8* %0, i32 %1, %struct.devnode* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.devnode*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.devnode* %2, %struct.devnode** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @devfs_label_associate_directory, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.devnode*, %struct.devnode** %7, align 8
  %13 = load %struct.devnode*, %struct.devnode** %7, align 8
  %14 = getelementptr inbounds %struct.devnode, %struct.devnode* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @MAC_PERFORM(i32 %9, i8* %10, i32 %11, %struct.devnode* %12, i32 %15, i8* %16)
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, i8*, i32, %struct.devnode*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
